plugins {
    alias(libs.plugins.android.application)
    id 'com.google.gms.google-services'
}

android {
    namespace 'bluen.homein.gayo_security'
    compileSdk 34


    defaultConfig {
        applicationId "bluen.homein.gayo_security"
        minSdk 26
        targetSdk 34
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    buildFeatures {
        viewBinding true
    }
    
    tasks.withType(JavaCompile).configureEach{options.fork = true
        options.forkOptions.jvmArgs +=[
                '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']}

}

dependencies {

    implementation libs.appcompat
    implementation libs.material
    implementation libs.constraintlayout
    implementation libs.navigation.fragment
    implementation libs.navigation.ui
    testImplementation libs.junit
    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.espresso.core

    // MultiDex
    implementation 'androidx.multidex:multidex:2.0.1'

    // Gson
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.2'

    // Mapping
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.3'

    // Butter Knife
    implementation libs.butterknife
    annotationProcessor libs.butterknife.compiler
    implementation libs.android.slidr

    implementation 'androidx.viewpager2:viewpager2:1.0.0'
    
    implementation 'io.github.ParkSangGwon:tedpermission-normal:3.3.0'


    // web RTC
//    implementation 'org.webrtc:google-webrtc:1.0.32006'
    implementation 'com.infobip:google-webrtc:1.0.0035529'
//    implementation files('libs/autobanh.jar')
//    implementation 'com.google.firebase:firebase-core:21.1.1'
//    implementation 'com.google.firebase:firebase-database:21.0.0'

    // Firebase
    implementation 'com.google.android.gms:play-services-gcm:16.0.0'
    // Import the BoM for the Firebase platform
    implementation platform('com.google.firebase:firebase-bom:30.1.0')
    // Declare the dependencies for the Firebase Cloud Messaging and Analytics libraries
    // When using the BoM, you don't specify versions in Firebase library dependencies
    implementation 'com.google.firebase:firebase-messaging'
    implementation 'com.google.firebase:firebase-analytics'
}